--- a/app/views/pages/configuration.haml
+++ b/app/views/pages/configuration.haml
@@ -14,7 +14,7 @@
       %li
         = link_to "JSCS", "#jscs"
       %li
-        = link_to "ESLint", "#jscs"
+        = link_to "ESLint", "#eslint"
       %li
         = link_to "SCSS", "#scss"
       %li
